// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
.sxjdf4a {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  padding: 0;
  border-radius: var(--sx-radii-round);
  border-color: var(--sx-colors-secondary300);
  border-width: 2px;
  border-style: solid;
  cursor: pointer;
  height: 20px;
  width: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

.sxjdf4a:focus {
  outline: none;
}

:checked + .sxjdf4a {
  background-color: var(--sx-colors-secondary300);
}

[disabled] + .sxjdf4a {
  background-color: var(--sx-colors-tonal600);
  border: 2px solid var(--sx-colors-tonal600);
}

.sxip64y {
  height: var(--sx-sizes-0);
  width: var(--sx-sizes-0);
  border-radius: var(--sx-radii-round);
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    role="radiogroup"
    tabindex="0"
  >
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="sxjdf4a"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
.sxjdf4a {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  padding: 0;
  border-radius: var(--sx-radii-round);
  border-color: var(--sx-colors-secondary300);
  border-width: 2px;
  border-style: solid;
  cursor: pointer;
  height: 20px;
  width: 20px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

.sxjdf4a:focus {
  outline: none;
}

:checked + .sxjdf4a {
  background-color: var(--sx-colors-secondary300);
}

[disabled] + .sxjdf4a {
  background-color: var(--sx-colors-tonal600);
  border: 2px solid var(--sx-colors-tonal600);
}

.sxip64y {
  height: var(--sx-sizes-0);
  width: var(--sx-sizes-0);
  border-radius: var(--sx-radii-round);
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    role="radiogroup"
    tabindex="0"
  >
    <button
      aria-checked="false"
      aria-label="indicator"
      class="sxjdf4a"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;
